--- a/src/components/NavigationBar/index.less
+++ b/src/components/NavigationBar/index.less
@@ -1,3 +1,9 @@
 .navigation-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 200px;
+  background-color: lightblue;
   color: red;
 }
