--- a/src/components/SideBar/index.less
+++ b/src/components/SideBar/index.less
@@ -1,4 +1,4 @@
-.navigation-bar {
+.side-bar {
   position: fixed;
   top: 0;
   left: 0;
@@ -6,4 +6,10 @@
   width: 200px;
   background-color: lightblue;
   color: red;
+
+  .logo {
+    color: blue;
+    width: 100%;
+    text-align: center;
+  }
 }
