feat: 引入react react-redux

--- a/src/components/PagesBar/index.less
+++ b/src/components/PagesBar/index.less
@@ -6,4 +6,7 @@
   right: 0;
   height: 40px;
   background-color: cyan;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
