--- a/src/components/SideBar/index.less
+++ b/src/components/SideBar/index.less
@@ -8,8 +8,13 @@
   color: red;
 
   .logo {
-    color: blue;
+    color: #fff;
     width: 100%;
     text-align: center;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: blue;
   }
 }
