--- a/src/components/SideBar/index.less
+++ b/src/components/SideBar/index.less
@@ -15,6 +15,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: blue;
+    background-color: red;
   }
 }
