--- a/src/components/PagesBar/item.less
+++ b/src/components/PagesBar/item.less
@@ -7,8 +7,7 @@
   padding: 0 30px;
   height: 38px;
   border: 1px solid black;
-  background-color: green;
-  color: white;
+  background-color: #dedede;
 
   .close {
     display: none;
@@ -21,7 +20,13 @@
     background-size: 100% 100%;
   }
 }
+.pages-bar__item.active {
+  background-color: green;
+  color: white;
+}
 .pages-bar__item:hover {
+  background-color: green;
+  color: white;
   .close {
     display: block;
   }
